@@ -345,7 +345,7 @@ void DiagScatterer::convert_to_dense() const
 {
   if (!recalc_needed() && R12_dense)
     return;
-  
+
   const_cast<DiagScatterer*>(this)->calcRT();
   
   const int N = global.N;
@@ -416,3 +416,52 @@ void MonoScatterer::swap_RT_with(MonoScatterer& sc_m)
   tmp=T12; T12=sc_m.T12; sc_m.T12=tmp;
   tmp=T21; T21=sc_m.T21; sc_m.T21=tmp;
 }
+
+
+
+/////////////////////////////////////////////////////////////////////////////
+//
+// TransparentScatterer::calcRT
+//  
+/////////////////////////////////////////////////////////////////////////////
+
+void TransparentScatterer::calcRT()
+{
+  allocRT(); 
+
+  R12 = 0.0; R21 = 0.0; 
+  T12 = 1.0; T21 = 1.0;
+}
+
+
+
+/////////////////////////////////////////////////////////////////////////////
+//
+// E_Wall::calcRT
+//  
+/////////////////////////////////////////////////////////////////////////////
+
+void E_Wall::calcRT()
+{
+  allocRT(); 
+
+  R12 = -1.0; R21 = -1.0; 
+  T12 =  0.0; T21 =  0.0;
+}
+
+
+
+/////////////////////////////////////////////////////////////////////////////
+//
+// H_Wall::calcRT
+//  
+/////////////////////////////////////////////////////////////////////////////
+
+void H_Wall::calcRT()
+{
+  allocRT(); 
+
+  R12 = 1.0; R21 = 1.0; 
+  T12 = 0.0; T21 = 0.0;
+}
+
